parser/tests/bad/ref03-3.st
% 'character' is unsubscriptable, for substrings, use 'x[n..m]' instead
%   variable string

var str : string
var subStr := str[1][1]
